fix: editor query